--- a/src/main/resources/public/adw/tomcat.html
+++ b/src/main/resources/public/adw/tomcat.html
@@ -94,7 +94,7 @@
   peopleTemplate.render = function(obj){
   return ""+
   "    <div class=\"peopleItem\">"+
-  "    <div class=\"portrait\"><img src=\"/adw/nopic.png\"></div>"+
+  "    <div class=\"portrait\"><img src=\"/app/adw/nopic.png\"></div>"+
   "    <div class=\"peopleContent\">"+
   "      <h4>"+obj.name + "</h4>"+
   "      "+obj.address+"<br>"+
@@ -110,7 +110,7 @@
   return "" +
   "  <div class=\"peopleTitle\">"+
   "    <div class=\"portrait\"><a href=\"#\" class=\"backButton\"><img src=\"/adw/back.png\"></a></div>"+
-  "    <div class=\"portrait\"><img src=\"/adw/nopic.png\"></div>"+
+  "    <div class=\"portrait\"><img src=\"/app/adw/nopic.png\"></div>"+
   "    <div class=\"peopleContent\">"+
   "      <h3>"+obj.name+"</h3>"+
   "      "+obj.address+"<br>"+
